--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-node_modules
+# Node modules
+/node_modules/
+# Build output
+/dist/
+# 忽略vite的临时配置文件
+/vite.config.js.timestamp-*
+# 忽略 IDE 配置文件
+/.idea/
+/.vscode/
